--- a/src/pages/Announcement/index.less
+++ b/src/pages/Announcement/index.less
@@ -72,10 +72,9 @@
           height: 36px;
           padding-left: 16px;
 
-          // background-color: aqua;
           .Avatar {
             width: 100%;
-            height: 16px;
+            height: 18px;
             overflow: hidden;
             color: #3c3a35;
             font-weight: 400;
@@ -95,7 +94,7 @@
             font-weight: 400;
             font-size: 12px;
             line-height: 12px;
-            line-height: 12px;
+            text-align: initial
           }
         }
 
